--- a/random.css
+++ b/random.css
@@ -99,8 +99,9 @@ main, h1{
 
   input[type="radio"] {
       opacity: 0;
-      width: 0;
+      /*width: 0; */
       margin: 0;
+      position: absolute;
   }
 
   label {
