--- a/random.css
+++ b/random.css
@@ -97,6 +97,18 @@ main, h1{
 
   }
 
+  button.next.error-checker {
+    margin-top: 3px;
+}
+
+  .answer4 {
+      margin-bottom: 0;
+  }
+
+  .red-border {
+      border:solid 1px red;
+  }
+
   input[type="radio"] {
       opacity: 0;
       /*width: 0; */
